--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,7 +35,7 @@ body {
 	box-sizing: border-box;
 	}
 body {
-	font-family: 'HK Grotesk', sans-serif; color: #222; background-color: #fff; font-size: 14px; line-height: 1.7; display: flex; align-items: center;
+	font-family: 'HK Grotesk', sans-serif; color: #222; background-color: #fff; font-size: 14px; line-height: 1.7;  align-items: center;
 	}
 img {
 	max-width: 100%; height: auto;
@@ -47,7 +47,7 @@ img {
  	text-shadow: none; color: #000; background: #FFF9CD;
 	}
 /* Loader */
-html {
+/* html {
 	overflow: hidden;
 	}
 html.loaded {
@@ -64,7 +64,7 @@ body {
 	}
 html.loaded body {
 	opacity: 1;
-	}
+	} */
 
 /*  --------------------------------------------
 
@@ -186,7 +186,7 @@ p:last-child {
 	
 /* FRAMED */
 .is-framed:after { 
-	content: ""; position: fixed; z-index: 200; pointer-events: none; top: 0; left: 0; right: 0; bottom: 0; border: 15px solid #111; 
+	content: ""; position: fixed; z-index: 200; pointer-events: none; top: 0; left: 0; right: 0; bottom: 0; border: 15px solid #00315C; 
 	}
 		
 		
