--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,60 @@
+/*
+  0-600px -> Phone
+  600-900 -> Tablet portrait
+  900-1200 -> tablet landscape
+  1200-1800 -> is where our normal styles apply
+  */
+/*
+    $breakpoint arguement choices
+    -phone
+    -tablet portrait
+    -tablet landscape
+    -big desktop
+  
+    ORDER : Base + typography > general + grid > page layout
+  */
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .row:not(:last-child) {
+        margin-bottom: 6rem; } }
+  @media (max-width: 56.25em) {
+    .row {
+      max-width: 50rem;
+      padding: 0 3rem; } }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 6rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 100% !important; } }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2*((100% - 2 * 6rem)/3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 *((100% - 3 * 6rem)/ 4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc(3 *((100% - 3 * 6rem)/ 4) + 2 * 6rem); }
+
 .profile {
   border-radius: 50%;
   width: 120px;
@@ -7,6 +64,10 @@
   display: inline-block;
   column-count: 3;
   column-gap: 100px; }
+  @media (max-width: 37.5em) {
+    .skills {
+      column-count: 1;
+      column-gap: 0; } }
   .skills-item {
     border: 3px solid black;
     border-radius: 3px;
@@ -17,3 +78,8 @@
       color: white; }
     .skills-item:not(:last-child) {
       margin-bottom: 30px; }
+
+.portafolio {
+  display: inline-block;
+  column-count: 2;
+  column-gap: 100px; }
