--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -9,6 +9,11 @@
     column-count: 3;
     column-gap: 100px;
 
+    @include respond(phone){
+        column-count: 1;
+        column-gap: 0;
+    }
+
     &-item{
         border: 3px solid black;
         border-radius: 3px;
@@ -24,4 +29,10 @@
             margin-bottom: 30px;
         }
     }
+}
+
+.portafolio{
+    display: inline-block;
+    column-count: 2;
+    column-gap: 100px;
 }
