--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -83,3 +83,10 @@
   display: inline-block;
   column-count: 2;
   column-gap: 100px; }
+
+.projectImage {
+  margin: 0 auto;
+  width: 30rem;
+  border-radius: 5px;
+  box-shadow: 1px -2px 127px -51px rgba(0, 0, 0, 0.53);
+  margin-bottom: 2rem; }
