Creando los componentes del blog

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -16,4 +16,6 @@ $gutter-vertical-small:6rem;
 $gutter-horizontal:6rem;
 
 // FONT
-$default-font-size:1.6rem
+$default-font-size:1.6rem;
+
+$navy:#414f5a;
