--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,9 @@
   */
 .row {
   max-width: 114rem;
-  margin: 0 auto; }
+  margin: 0 auto;
+  position: relative;
+  z-index: 20; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
     @media (max-width: 56.25em) {
@@ -90,3 +92,13 @@
   border-radius: 5px;
   box-shadow: 1px -2px 127px -51px rgba(0, 0, 0, 0.53);
   margin-bottom: 2rem; }
+
+.posts {
+  column-count: 3;
+  padding: 0 5rem;
+  margin-bottom: 6rem; }
+
+.BlogCard {
+  border: 3px solid #414f5a;
+  padding: 2rem;
+  box-shadow: 1px -2px 127px -51px rgba(0, 0, 0, 0.3); }
