--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,6 +1,8 @@
 .row {
     max-width: $grid-width;
     margin: 0 auto;
+    position: relative;
+    z-index: 20;
   
     &:not(:last-child) {
       margin-bottom: $gutter-vertical;
