--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -44,3 +44,16 @@
     box-shadow: 1px -2px 127px -51px rgba(0,0,0,0.53);
     margin-bottom: 2rem;
 }
+
+.posts{
+    column-count: 3;
+    padding: 0 5rem;
+    margin-bottom: 6rem;
+}
+
+.BlogCard{
+    border: 3px solid $navy;
+    padding: 2rem;
+    box-shadow: 1px -2px 127px -51px rgba(0,0,0,0.3);
+
+}
