--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -74,7 +74,7 @@
     border: 3px solid black;
     border-radius: 3px;
     padding: 1rem 2rem;
-    transition: all .2s; }
+    transition: all 0.2s; }
     .skills-item:hover {
       background-color: #2998ff;
       color: white; }
@@ -97,8 +97,23 @@
   column-count: 3;
   padding: 0 5rem;
   margin-bottom: 6rem; }
+  @media (max-width: 37.5em) {
+    .posts {
+      column-count: 1;
+      column-gap: 0;
+      padding: 0; } }
+  @media (max-width: 56.25em) {
+    .posts {
+      column-count: 1; } }
 
 .BlogCard {
   border: 3px solid #414f5a;
   padding: 2rem;
   box-shadow: 1px -2px 127px -51px rgba(0, 0, 0, 0.3); }
+  @media (max-width: 37.5em) {
+    .BlogCard {
+      margin-bottom: 1rem;
+      padding: 1rem; } }
+  @media (max-width: 56.25em) {
+    .BlogCard {
+      margin-bottom: 2rem; } }
