--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -1,59 +1,76 @@
-.profile{
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
+.profile {
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
 }
-.skills{
-    
-    display: inline-block;
-    column-count: 3;
-    column-gap: 100px;
+.skills {
+  display: inline-block;
+  column-count: 3;
+  column-gap: 100px;
 
-    @include respond(phone){
-        column-count: 1;
-        column-gap: 0;
+  @include respond(phone) {
+    column-count: 1;
+    column-gap: 0;
+  }
+
+  &-item {
+    border: 3px solid black;
+    border-radius: 3px;
+    padding: 1rem 2rem;
+    transition: all 0.2s;
+
+    &:hover {
+      background-color: $color-primary-light;
+      color: white;
     }
 
-    &-item{
-        border: 3px solid black;
-        border-radius: 3px;
-        padding: 1rem 2rem;
-        transition: all .2s;
-
-        &:hover{
-            background-color: $color-primary-light;
-            color: white;
-        }
-
-        &:not(:last-child){
-            margin-bottom: 30px;
-        }
+    &:not(:last-child) {
+      margin-bottom: 30px;
     }
+  }
 }
 
-.portafolio{
-    display: inline-block;
-    column-count: 2;
-    column-gap: 100px;
+.portafolio {
+  display: inline-block;
+  column-count: 2;
+  column-gap: 100px;
 }
 
 .projectImage {
-    margin: 0 auto;
-    width: 30rem;
-    border-radius: 5px;
-    box-shadow: 1px -2px 127px -51px rgba(0,0,0,0.53);
+  margin: 0 auto;
+  width: 30rem;
+  border-radius: 5px;
+  box-shadow: 1px -2px 127px -51px rgba(0, 0, 0, 0.53);
+  margin-bottom: 2rem;
+}
+
+.posts {
+  column-count: 3;
+  padding: 0 5rem;
+  margin-bottom: 6rem;
+
+  @include respond(phone) {
+    column-count: 1;
+    column-gap: 0;
+    padding: 0;
+  }
+
+  @include respond(tab-port) {
+    column-count: 1;
+  }
+}
+
+.BlogCard {
+  border: 3px solid $navy;
+  padding: 2rem;
+  box-shadow: 1px -2px 127px -51px rgba(0, 0, 0, 0.3);
+
+  @include respond(phone){
+   margin-bottom: 1rem;
+   padding: 1rem;
+}
+
+@include respond(tab-port) {
     margin-bottom: 2rem;
-}
-
-.posts{
-    column-count: 3;
-    padding: 0 5rem;
-    margin-bottom: 6rem;
-}
-
-.BlogCard{
-    border: 3px solid $navy;
-    padding: 2rem;
-    box-shadow: 1px -2px 127px -51px rgba(0,0,0,0.3);
-
+  }
 }
