--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -65,12 +65,38 @@
   padding: 2rem;
   box-shadow: 1px -2px 127px -51px rgba(0, 0, 0, 0.3);
 
-  @include respond(phone){
-   margin-bottom: 1rem;
-   padding: 1rem;
+  @include respond(phone) {
+    margin-bottom: 1rem;
+    padding: 1rem;
+  }
+
+  @include respond(tab-port) {
+    margin-bottom: 2rem;
+  }
 }
 
-@include respond(tab-port) {
-    margin-bottom: 2rem;
+.inputForm {
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  margin: 1rem;
+
+  @include respond(phone) {
+    width: 90%;
+  }
+}
+
+.footer {
+  width: 100%;
+  height: 6rem;
+  background-color: #00315c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+  color: white;
+
+  @include respond(phone) {
+    height: 4rem;
   }
 }
